# ophelos_python_sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  USAGE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_usage.py  concurrent_usage.py  debt_model_example.py  install_and_use.py  pagination_and_generators.py
ophelos/: __init__.py  auth.py  client.py  exceptions.py  http_client.py  models.py  py.typed  webhooks.py
ophelos/resources/: __init__.py  base.py  communications.py  customers.py  debts.py  invoices.py  organisations.py  payment_plans.py  payments.py  payouts.py  tenants.py  webhooks.py
ophelos_sdk/: __init__.py  auth.py  client.py  exceptions.py  http_client.py  py.typed  webhooks.py
ophelos_sdk/models/: __init__.py  base.py  communication.py  customer.py  debt.py  invoice.py  organisation.py  pagination.py  payment.py  payout.py  tenant.py  webhook.py
ophelos_sdk/resources/: __init__.py  base.py  communications.py  contact_details.py  customers.py  debts.py  invoices.py  line_items.py  organisations.py  payment_plans.py  payments.py  payouts.py  tenants.py  webhooks.py
scripts/: check_installation.py  run_tests.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_client.py  test_http_client.py  test_integration.py  test_models.py  test_resources.py  test_thread_safety.py  test_webhooks.py
tests/models/: __init__.py  test_communication.py  test_contact_detail.py  test_customer.py  test_debt.py  test_enumerations.py  test_invoice.py  test_organisation.py  test_pagination.py  test_payment.py  test_payout.py  test_serialization.py  test_tenant.py  test_webhook.py
tests/resources/: __init__.py  test_base.py  test_contact_details.py  test_customers.py  test_debts.py  test_error_handling.py  test_invoices.py  test_line_items.py  test_payments.py
